[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/GUI/HUD_level.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/scripts/level_logic.gd" type="Script" id=2]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://res/FreeTileset/png/BG/BG.png" type="Texture" id=4]
[ext_resource path="res://scenes/Level/objs/triggerAreas/gameOver.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Level/objs/triggerAreas/goalPoint.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Level/objs/coins.tscn" type="PackedScene" id=7]
[ext_resource path="res://res/FreeTileset/tile001.tres" type="TileSet" id=8]
[ext_resource path="res://scenes/Level/objs/triggerAreas/instanceWakk.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/Level/objs/traps/movingType/trap_spin.tscn" type="PackedScene" id=10]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 347.305, 241.872, 0, 0, 0, 0, 701.766, -39.142, 0, 0, 0, 0, 548.486, -159.85, 0, 0, 0, 0, 68.8463, -161.766, 0, 0, 0, 0, -41.6432, -64.6888, 0, 0, 0, 0, 303.876, 235.485 )
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Player_RigidBody2D" parent="." instance=ExtResource( 3 )]
position = Vector2( 188.52, 371.902 )
z_index = 1
z_as_relative = false

[node name="Camera2D" type="Camera2D" parent="Player_RigidBody2D"]
position = Vector2( -134.917, -322.675 )
offset = Vector2( 93.834, 339.2 )
current = true
__meta__ = {
"_edit_lock_": true
}

[node name="bg_node" type="Node2D" parent="Player_RigidBody2D/Camera2D"]
position = Vector2( -1299.42, -50.9158 )
z_index = -1
__meta__ = {
"_edit_lock_": true
}

[node name="TextureRect" type="TextureRect" parent="Player_RigidBody2D/Camera2D/bg_node"]
light_mask = 0
margin_left = 858.0
margin_right = 1972.0
margin_bottom = 747.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="pos_start" type="Position2D" parent="."]
position = Vector2( 136.373, 348.99 )

[node name="HUD_level" parent="." instance=ExtResource( 1 )]

[node name="map" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="map_outbound" type="TileMap" parent="map"]
z_as_relative = false
tile_set = ExtResource( 8 )
cell_size = Vector2( 40, 40 )
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
collision_bounce = 0.54
format = 1
tile_data = PoolIntArray( 327681, 12, 0, 327682, 12, 0, 327683, 12, 0, 327684, 12, 0, 327685, 12, 0, 327686, 12, 0, 327687, 12, 0, 327688, 12, 0, 327689, 12, 0, 327690, 12, 0, 327691, 12, 0, 327692, 12, 0, 327693, 12, 0, 458743, 21, 0, 458744, 21, 0, 458745, 21, 0, 458746, 21, 0, 458747, 21, 0, 458748, 21, 0, 458749, 21, 0, 458750, 21, 0, 458751, 21, 0, 393216, 21, 0, 393225, 12, 0, 393226, 12, 0, 393227, 21, 0, 393228, 21, 0, 393229, 21, 0, 393230, 19, 0, 393231, 21, 0, 393232, 21, 0, 393233, 21, 0, 393234, 21, 0, 393235, 21, 0, 393236, 21, 0, 524279, 12, 0, 524280, 12, 0, 524281, 12, 0, 524282, 12, 0, 524283, 12, 0, 524284, 12, 0, 524285, 12, 0, 524286, 12, 0, 524287, 12, 0, 458752, 12, 0, 458753, 12, 0, 458754, 12, 0, 458755, 12, 0, 458756, 12, 0, 458757, 12, 0, 458758, 12, 0, 458759, 12, 0, 458760, 12, 0, 458761, 12, 0, 458762, 12, 0, 458763, 12, 0, 458764, 12, 0, 458765, 12, 0, 458766, 12, 0, 458767, 12, 0, 458768, 12, 0, 458769, 12, 0, 458770, 12, 0, 458771, 12, 0, 458772, 12, 0, 458773, 12, 0, 655352, 11, 0, 655354, 11, 0, 655356, 11, 0, 655358, 11, 0, 589841, 11, 0, 589851, 11, 0, 589853, 11, 0, 589855, 11, 0, 655377, 12, 0, 655378, 12, 0, 655382, 12, 0, 655383, 12, 0, 655384, 12, 0, 655385, 12, 0, 655387, 12, 0, 655389, 12, 0, 655391, 12, 0, 917477, 32, 0, 917478, 32, 0, 917479, 32, 0, 917480, 32, 0, 917481, 32, 0, 917482, 32, 0, 917483, 32, 0, 917484, 32, 0, 917485, 32, 0, 917486, 32, 0, 917487, 32, 0, 917488, 32, 0, 917489, 32, 0, 917490, 32, 0, 917491, 32, 0, 917492, 32, 0, 917493, 32, 0, 917494, 32, 0, 917495, 32, 0, 917496, 32, 0, 917497, 32, 0, 917498, 32, 0, 917499, 32, 0, 917500, 32, 0, 917501, 32, 0, 917502, 32, 0, 917503, 32, 0, 851968, 32, 0, 851969, 32, 0, 851970, 32, 0, 851971, 32, 0, 851972, 32, 0, 851973, 32, 0, 851974, 32, 0, 851975, 32, 0, 851976, 32, 0, 851977, 32, 0, 851978, 32, 0, 851979, 32, 0, 851980, 32, 0, 851981, 32, 0, 851982, 32, 0, 851983, 32, 0, 851984, 32, 0, 851985, 32, 0, 851986, 32, 0, 851987, 32, 0, 851988, 32, 0, 851989, 32, 0, 851990, 32, 0, 851991, 32, 0, 851992, 32, 0, 851993, 32, 0, 851994, 32, 0, 851995, 32, 0, 851996, 32, 0, 851997, 32, 0, 851998, 32, 0, 851999, 32, 0, 852000, 32, 0, 852001, 32, 0, 852002, 32, 0, 852003, 32, 0, 852017, 32, 0, 852018, 32, 0, 852019, 32, 0, 852020, 32, 0, 852021, 32, 0, 852022, 32, 0, 852023, 32, 0, 852024, 32, 0, 852025, 32, 0, 852026, 32, 0, 852027, 32, 0, 983013, 33, 0, 983014, 33, 0, 983015, 33, 0, 983016, 33, 0, 983017, 33, 0, 983018, 33, 0, 983019, 33, 0, 983020, 33, 0, 983021, 33, 0, 983022, 33, 0, 983023, 33, 0, 983024, 33, 0, 983025, 33, 0, 983026, 33, 0, 983027, 33, 0, 983028, 33, 0, 983029, 33, 0, 983030, 33, 0, 983031, 33, 0, 983032, 33, 0, 983033, 33, 0, 983034, 33, 0, 983035, 33, 0, 983036, 33, 0, 983037, 33, 0, 983038, 33, 0, 983039, 33, 0, 917504, 33, 0, 917505, 33, 0, 917506, 33, 0, 917507, 33, 0, 917508, 33, 0, 917509, 33, 0, 917510, 33, 0, 917511, 33, 0, 917512, 33, 0, 917513, 33, 0, 917514, 33, 0, 917515, 33, 0, 917516, 33, 0, 917517, 33, 0, 917518, 33, 0, 917519, 33, 0, 917520, 33, 0, 917521, 33, 0, 917522, 33, 0, 917523, 33, 0, 917524, 33, 0, 917525, 33, 0, 917526, 33, 0, 917527, 33, 0, 917528, 33, 0, 917529, 33, 0, 917530, 33, 0, 917531, 33, 0, 917532, 33, 0, 917533, 33, 0, 917534, 33, 0, 917535, 33, 0, 917536, 33, 0, 917537, 33, 0, 917538, 33, 0, 917539, 33, 0, 917553, 33, 0, 917554, 33, 0, 917555, 33, 0, 917556, 33, 0, 917557, 33, 0, 917558, 33, 0, 917559, 33, 0, 917560, 33, 0, 917561, 33, 0, 917562, 33, 0, 917563, 33, 0, 1048549, 33, 0, 1048550, 33, 0, 1048551, 33, 0, 1048552, 33, 0, 1048553, 33, 0, 1048554, 33, 0, 1048555, 33, 0, 1048556, 33, 0, 1048557, 33, 0, 1048558, 33, 0, 1048559, 33, 0, 1048560, 33, 0, 1048561, 33, 0, 1048562, 33, 0, 1048563, 33, 0, 1048564, 33, 0, 1048565, 33, 0, 1048566, 33, 0, 1048567, 33, 0, 1048568, 33, 0, 1048569, 33, 0, 1048570, 33, 0, 1048571, 33, 0, 1048572, 33, 0, 1048573, 33, 0, 1048574, 33, 0, 1048575, 33, 0, 983040, 33, 0, 983041, 33, 0, 983042, 33, 0, 983043, 33, 0, 983044, 33, 0, 983045, 33, 0, 983046, 33, 0, 983047, 33, 0, 983048, 33, 0, 983049, 33, 0, 983050, 33, 0, 983051, 33, 0, 983052, 33, 0, 983053, 33, 0, 983054, 33, 0, 983055, 33, 0, 983056, 33, 0, 983057, 33, 0, 983058, 33, 0, 983059, 33, 0, 983060, 33, 0, 983061, 33, 0, 983062, 33, 0, 983063, 33, 0, 983064, 33, 0, 983065, 33, 0, 983066, 33, 0, 983067, 33, 0, 983068, 33, 0, 983069, 33, 0, 983070, 33, 0, 983071, 33, 0, 983072, 33, 0, 983073, 33, 0, 983074, 33, 0, 983075, 33, 0, 983089, 33, 0, 983090, 33, 0, 983091, 33, 0, 983092, 33, 0, 983093, 33, 0, 983094, 33, 0, 983095, 33, 0, 983096, 33, 0, 983097, 33, 0, 983098, 33, 0, 983099, 33, 0, 1114085, 33, 0, 1114086, 33, 0, 1114087, 33, 0, 1114088, 33, 0, 1114089, 33, 0, 1114090, 33, 0, 1114091, 33, 0, 1114092, 33, 0, 1114093, 33, 0, 1114094, 33, 0, 1114095, 33, 0, 1114096, 33, 0, 1114097, 33, 0, 1114098, 33, 0, 1114099, 33, 0, 1114100, 33, 0, 1114101, 33, 0, 1114102, 33, 0, 1114103, 33, 0, 1114104, 33, 0, 1114105, 33, 0, 1114106, 33, 0, 1114107, 33, 0, 1114108, 33, 0, 1114109, 33, 0, 1114110, 33, 0, 1114111, 33, 0, 1048576, 33, 0, 1048577, 33, 0, 1048578, 33, 0, 1048579, 33, 0, 1048580, 33, 0, 1048581, 33, 0, 1048582, 33, 0, 1048583, 33, 0, 1048584, 33, 0, 1048585, 33, 0, 1048586, 33, 0, 1048587, 33, 0, 1048588, 33, 0, 1048589, 33, 0, 1048590, 33, 0, 1048591, 33, 0, 1048592, 33, 0, 1048593, 33, 0, 1048594, 33, 0, 1048595, 33, 0, 1048596, 33, 0, 1048597, 33, 0, 1048598, 33, 0, 1048599, 33, 0, 1048600, 33, 0, 1048601, 33, 0, 1048602, 33, 0, 1048603, 33, 0, 1048604, 33, 0, 1048605, 33, 0, 1048606, 33, 0, 1048607, 33, 0, 1048608, 33, 0, 1048609, 33, 0, 1048610, 33, 0, 1048611, 33, 0, 1048625, 33, 0, 1048626, 33, 0, 1048627, 33, 0, 1048628, 33, 0, 1048629, 33, 0, 1048630, 33, 0, 1048631, 33, 0, 1048632, 33, 0, 1048633, 33, 0, 1048634, 33, 0, 1048635, 33, 0, 1179621, 33, 0, 1179622, 33, 0, 1179623, 33, 0, 1179624, 33, 0, 1179625, 33, 0, 1179626, 33, 0, 1179627, 33, 0, 1179628, 33, 0, 1179629, 33, 0, 1179630, 33, 0, 1179631, 33, 0, 1179632, 33, 0, 1179633, 33, 0, 1179634, 33, 0, 1179635, 33, 0, 1179636, 33, 0, 1179637, 33, 0, 1179638, 33, 0, 1179639, 33, 0, 1179640, 33, 0, 1179641, 33, 0, 1179642, 33, 0, 1179643, 33, 0, 1179644, 33, 0, 1179645, 33, 0, 1179646, 33, 0, 1179647, 33, 0, 1114112, 33, 0, 1114113, 33, 0, 1114114, 33, 0, 1114115, 33, 0, 1114116, 33, 0, 1114117, 33, 0, 1114118, 33, 0, 1114119, 33, 0, 1114120, 33, 0, 1114121, 33, 0, 1114122, 33, 0, 1114123, 33, 0, 1114124, 33, 0, 1114125, 33, 0, 1114126, 33, 0, 1114127, 33, 0, 1114128, 33, 0, 1114129, 33, 0, 1114130, 33, 0, 1114131, 33, 0, 1114132, 33, 0, 1114133, 33, 0, 1114134, 33, 0, 1114135, 33, 0, 1114136, 33, 0, 1114137, 33, 0, 1114138, 33, 0, 1114139, 33, 0, 1114140, 33, 0, 1114141, 33, 0, 1114142, 33, 0, 1114143, 33, 0, 1114144, 33, 0, 1114145, 33, 0, 1114146, 33, 0, 1114147, 33, 0, 1114148, 33, 0, 1114149, 33, 0, 1114150, 33, 0, 1114151, 33, 0, 1114152, 33, 0, 1114153, 33, 0, 1114154, 33, 0, 1114155, 33, 0, 1114156, 33, 0, 1114157, 33, 0, 1114158, 33, 0, 1114159, 33, 0, 1114160, 33, 0, 1114161, 33, 0, 1114162, 33, 0, 1114163, 33, 0, 1114164, 33, 0, 1114165, 33, 0, 1114166, 33, 0, 1114167, 33, 0, 1114168, 33, 0, 1114169, 33, 0, 1114170, 33, 0, 1114171, 33, 0, 1245157, 33, 0, 1245158, 33, 0, 1245159, 33, 0, 1245160, 33, 0, 1245161, 33, 0, 1245162, 33, 0, 1245163, 33, 0, 1245164, 33, 0, 1245165, 33, 0, 1245166, 33, 0, 1245167, 33, 0, 1245168, 33, 0, 1245169, 33, 0, 1245170, 33, 0, 1245171, 33, 0, 1245172, 33, 0, 1245173, 33, 0, 1245174, 33, 0, 1245175, 33, 0, 1245176, 33, 0, 1245177, 33, 0, 1245178, 33, 0, 1245179, 33, 0, 1245180, 33, 0, 1245181, 33, 0, 1245182, 33, 0, 1245183, 33, 0, 1179648, 33, 0, 1179649, 33, 0, 1179650, 33, 0, 1179651, 33, 0, 1179652, 33, 0, 1179653, 33, 0, 1179654, 33, 0, 1179655, 33, 0, 1179656, 33, 0, 1179657, 33, 0, 1179658, 33, 0, 1179659, 33, 0, 1179660, 33, 0, 1179661, 33, 0, 1179662, 33, 0, 1179663, 33, 0, 1179664, 33, 0, 1179665, 33, 0, 1179666, 33, 0, 1179667, 33, 0, 1179668, 33, 0, 1179669, 33, 0, 1179670, 33, 0, 1179671, 33, 0, 1179672, 33, 0, 1179673, 33, 0, 1179674, 33, 0, 1179675, 33, 0, 1179676, 33, 0, 1179677, 33, 0, 1179678, 33, 0, 1179679, 33, 0, 1179680, 33, 0, 1179681, 33, 0, 1179682, 33, 0, 1179683, 33, 0, 1179684, 33, 0, 1179685, 33, 0, 1179686, 33, 0, 1179687, 33, 0, 1179688, 33, 0, 1179689, 33, 0, 1179690, 33, 0, 1179691, 33, 0, 1179692, 33, 0, 1179693, 33, 0, 1179694, 33, 0, 1179695, 33, 0, 1179696, 33, 0, 1179697, 33, 0, 1179698, 33, 0, 1179699, 33, 0, 1179700, 33, 0, 1179701, 33, 0, 1179702, 33, 0, 1179703, 33, 0, 1179704, 33, 0, 1179705, 33, 0, 1179706, 33, 0, 1179707, 33, 0 )

[node name="map_base" type="TileMap" parent="map"]
z_as_relative = false
tile_set = ExtResource( 8 )
cell_size = Vector2( 40, 40 )
cell_quadrant_size = 10
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
collision_use_kinematic = true
collision_bounce = 1.0
format = 1
tile_data = PoolIntArray( -458757, 27, 0, -458756, 27, 0, -458755, 27, 0, -458754, 27, 0, -458753, 27, 0, -524288, 27, 0, -524287, 27, 0, -524286, 27, 0, -524285, 27, 0, -524284, 27, 0, -524283, 27, 0, -524282, 27, 0, -524281, 27, 0, -524280, 27, 0, -524279, 27, 0, -524278, 27, 0, -524277, 27, 0, -524276, 27, 0, -524275, 27, 0, -524274, 27, 0, -524273, 27, 0, -524272, 27, 0, -524271, 27, 0, -524270, 27, 0, -524269, 27, 0, -524268, 27, 0, -524267, 27, 0, -524266, 27, 0, -524265, 27, 0, -524264, 27, 0, -524263, 27, 0, -524262, 27, 0, -524261, 27, 0, -393221, 27, 0, -393220, 27, 0, -393219, 27, 0, -393218, 30, 0, -393217, 30, 0, -458752, 30, 0, -458751, 30, 0, -458750, 30, 0, -458749, 30, 0, -458748, 30, 0, -458747, 30, 0, -458746, 30, 0, -458745, 30, 0, -458744, 30, 0, -458743, 30, 0, -458742, 30, 0, -458741, 30, 0, -458740, 30, 0, -458739, 30, 0, -458738, 30, 0, -458737, 30, 0, -458736, 30, 0, -458735, 30, 0, -458734, 30, 0, -458733, 30, 0, -458732, 30, 0, -458731, 30, 0, -458730, 30, 0, -458729, 30, 0, -458728, 30, 0, -458727, 27, 0, -458726, 27, 0, -458725, 27, 0, -327685, 27, 0, -327684, 27, 0, -327683, 28, 0, -393191, 26, 0, -393190, 27, 0, -393189, 27, 0, -262149, 27, 0, -262148, 27, 0, -262147, 28, 0, -327655, 26, 0, -327654, 27, 0, -327653, 27, 0, -196613, 27, 0, -196612, 27, 0, -196611, 28, 0, -262119, 26, 0, -262118, 27, 0, -262117, 27, 0, -131077, 27, 0, -131076, 27, 0, -131075, 28, 0, -196605, 37, 0, -196604, 37, 0, -196603, 37, 0, -196602, 37, 0, -196601, 37, 0, -196600, 37, 0, -196599, 37, 0, -196598, 37, 0, -196597, 37, 0, -196583, 26, 0, -196582, 27, 0, -196581, 27, 0, -65541, 27, 0, -65540, 27, 0, -65539, 28, 0, -131047, 26, 0, -131046, 27, 0, -131045, 27, 0, -5, 27, 0, -4, 27, 0, -3, 28, 0, -65522, 37, 0, -65517, 22, 0, -65516, 23, 0, -65515, 25, 0, -65511, 26, 0, -65510, 27, 0, -65509, 27, 0, 65531, 27, 0, 65532, 27, 0, 65533, 28, 0, 19, 26, 0, 20, 27, 0, 21, 28, 0, 25, 26, 0, 26, 27, 0, 27, 27, 0, 131067, 27, 0, 131068, 27, 0, 131069, 28, 0, 65553, 37, 0, 65555, 26, 0, 65556, 27, 0, 65557, 28, 0, 65561, 26, 0, 65562, 27, 0, 65563, 27, 0, 196603, 27, 0, 196604, 27, 0, 196605, 31, 0, 196606, 25, 0, 131091, 26, 0, 131092, 27, 0, 131093, 28, 0, 131097, 26, 0, 131098, 27, 0, 131099, 27, 0, 262139, 27, 0, 262140, 27, 0, 262141, 27, 0, 262142, 31, 0, 196622, 37, 0, 196627, 26, 0, 196628, 27, 0, 196629, 28, 0, 196633, 26, 0, 196634, 27, 0, 196635, 27, 0, 327675, 27, 0, 327676, 27, 0, 327677, 27, 0, 327678, 27, 0, 262163, 26, 0, 262164, 27, 0, 262165, 28, 0, 262169, 26, 0, 262170, 27, 0, 262171, 27, 0, 262202, 22, 0, 262203, 24, 0, 262204, 24, 0, 393211, 27, 0, 393212, 27, 0, 393213, 27, 0, 393214, 27, 0, 327697, 37, 0, 327699, 26, 0, 327700, 27, 0, 327701, 28, 0, 327705, 26, 0, 327706, 27, 0, 327707, 27, 0, 327738, 26, 0, 327739, 27, 0, 327740, 27, 0, 458747, 27, 0, 458748, 27, 0, 458749, 27, 0, 458750, 27, 0, 393235, 26, 0, 393236, 27, 0, 393237, 28, 0, 393241, 26, 0, 393242, 27, 0, 393243, 27, 0, 393274, 26, 0, 393275, 27, 0, 393276, 27, 0, 524283, 27, 0, 524284, 27, 0, 524285, 27, 0, 524286, 28, 0, 458766, 37, 0, 458771, 26, 0, 458772, 27, 0, 458773, 28, 0, 458777, 26, 0, 458778, 27, 0, 458779, 27, 0, 458810, 26, 0, 458811, 27, 0, 458812, 27, 0, 589819, 27, 0, 589820, 27, 0, 589821, 27, 0, 589822, 28, 0, 524307, 26, 0, 524308, 27, 0, 524309, 28, 0, 524313, 26, 0, 524314, 27, 0, 524315, 27, 0, 524346, 26, 0, 524347, 27, 0, 524348, 27, 0, 655355, 27, 0, 655356, 27, 0, 655357, 28, 0, 589841, 37, 0, 589843, 26, 0, 589844, 27, 0, 589845, 28, 0, 589849, 26, 0, 589850, 27, 0, 589851, 27, 0, 589882, 26, 0, 589883, 27, 0, 589884, 27, 0, 720891, 27, 0, 720892, 27, 0, 720893, 28, 0, 655379, 26, 0, 655380, 27, 0, 655381, 28, 0, 655385, 26, 0, 655386, 27, 0, 655387, 27, 0, 655418, 26, 0, 655419, 27, 0, 655420, 27, 0, 786427, 27, 0, 786428, 27, 0, 786429, 31, 0, 786430, 23, 0, 786431, 23, 0, 720896, 23, 0, 720897, 23, 0, 720898, 23, 0, 720899, 23, 0, 720900, 23, 0, 720901, 23, 0, 720902, 23, 0, 720903, 23, 0, 720904, 23, 0, 720905, 23, 0, 720906, 23, 0, 720907, 23, 0, 720908, 23, 0, 720909, 23, 0, 720910, 23, 0, 720911, 23, 0, 720912, 23, 0, 720913, 23, 0, 720914, 23, 0, 720915, 29, 0, 720916, 27, 0, 720917, 31, 0, 720918, 23, 0, 720919, 23, 0, 720920, 23, 0, 720921, 29, 0, 720922, 27, 0, 720923, 27, 0, 720954, 26, 0, 720955, 27, 0, 720956, 27, 0, 851963, 27, 0, 851964, 27, 0, 851965, 27, 0, 851966, 27, 0, 851967, 27, 0, 786432, 27, 0, 786433, 27, 0, 786434, 27, 0, 786435, 27, 0, 786436, 27, 0, 786437, 27, 0, 786438, 27, 0, 786439, 27, 0, 786440, 27, 0, 786441, 27, 0, 786442, 27, 0, 786443, 27, 0, 786444, 27, 0, 786445, 27, 0, 786446, 27, 0, 786447, 27, 0, 786448, 27, 0, 786449, 27, 0, 786450, 27, 0, 786451, 27, 0, 786452, 27, 0, 786453, 27, 0, 786454, 27, 0, 786455, 27, 0, 786456, 27, 0, 786457, 27, 0, 786458, 27, 0, 786459, 27, 0, 786490, 26, 0, 786491, 27, 0, 786492, 27, 0, 917499, 27, 0, 917500, 27, 0, 917501, 27, 0, 917502, 27, 0, 917503, 27, 0, 851968, 27, 0, 851969, 27, 0, 851970, 27, 0, 851971, 27, 0, 851972, 27, 0, 851973, 27, 0, 851974, 27, 0, 851975, 27, 0, 851976, 27, 0, 851977, 27, 0, 851978, 27, 0, 851979, 27, 0, 851980, 27, 0, 851981, 27, 0, 851982, 27, 0, 851983, 27, 0, 851984, 27, 0, 851985, 27, 0, 851986, 27, 0, 851987, 27, 0, 851988, 27, 0, 851989, 27, 0, 851990, 27, 0, 851991, 27, 0, 851992, 27, 0, 851993, 27, 0, 851994, 27, 0, 851995, 27, 0, 852026, 26, 0, 852027, 27, 0, 852028, 27, 0, 983035, 27, 0, 983036, 27, 0, 983037, 27, 0, 983038, 27, 0, 983039, 27, 0, 917504, 27, 0, 917505, 27, 0, 917506, 27, 0, 917507, 27, 0, 917508, 27, 0, 917509, 27, 0, 917510, 27, 0, 917511, 27, 0, 917512, 27, 0, 917513, 27, 0, 917514, 27, 0, 917515, 27, 0, 917516, 27, 0, 917517, 27, 0, 917518, 27, 0, 917519, 27, 0, 917520, 27, 0, 917521, 27, 0, 917522, 27, 0, 917523, 27, 0, 917524, 27, 0, 917525, 27, 0, 917526, 27, 0, 917527, 27, 0, 917528, 27, 0, 917529, 27, 0, 917530, 27, 0, 917531, 27, 0, 917562, 26, 0, 917563, 27, 0, 917564, 27, 0, 1048571, 27, 0, 1048572, 27, 0, 1048573, 27, 0, 1048574, 27, 0, 1048575, 27, 0, 983040, 27, 0, 983041, 27, 0, 983042, 27, 0, 983043, 27, 0, 983044, 27, 0, 983045, 27, 0, 983046, 27, 0, 983047, 27, 0, 983048, 27, 0, 983049, 27, 0, 983050, 27, 0, 983051, 27, 0, 983052, 27, 0, 983053, 27, 0, 983054, 27, 0, 983055, 27, 0, 983056, 27, 0, 983057, 27, 0, 983058, 27, 0, 983059, 27, 0, 983060, 27, 0, 983061, 27, 0, 983062, 27, 0, 983063, 27, 0, 983064, 27, 0, 983065, 27, 0, 983066, 27, 0, 983067, 27, 0, 983098, 26, 0, 983099, 27, 0, 983100, 27, 0, 1114107, 27, 0, 1114108, 27, 0, 1114109, 27, 0, 1114110, 27, 0, 1114111, 27, 0, 1048576, 27, 0, 1048577, 27, 0, 1048578, 27, 0, 1048579, 27, 0, 1048580, 27, 0, 1048581, 27, 0, 1048582, 27, 0, 1048583, 27, 0, 1048584, 27, 0, 1048585, 27, 0, 1048586, 27, 0, 1048587, 27, 0, 1048588, 27, 0, 1048589, 27, 0, 1048590, 27, 0, 1048591, 27, 0, 1048592, 27, 0, 1048593, 27, 0, 1048594, 27, 0, 1048595, 27, 0, 1048596, 27, 0, 1048597, 27, 0, 1048598, 27, 0, 1048599, 27, 0, 1048600, 27, 0, 1048601, 27, 0, 1048602, 27, 0, 1048603, 27, 0, 1048634, 26, 0, 1048635, 27, 0, 1048636, 27, 0 )

[node name="Coin" parent="map" instance=ExtResource( 7 )]
position = Vector2( 919.072, 280.637 )
value = 1

[node name="Coin2" parent="map" instance=ExtResource( 7 )]
position = Vector2( 915.444, 95.3264 )
value = 1

[node name="Coin3" parent="map" instance=ExtResource( 7 )]
position = Vector2( 300.049, -144.04 )
value = 1

[node name="Coin4" parent="map" instance=ExtResource( 7 )]
position = Vector2( 216.587, -143.016 )
value = 1

[node name="Coin5" parent="map" instance=ExtResource( 7 )]
position = Vector2( 431.833, 42.8854 )
value = 1

[node name="Coin6" parent="map" instance=ExtResource( 7 )]
position = Vector2( 328.011, 163.727 )
value = 1

[node name="Coin7" parent="map" instance=ExtResource( 7 )]
position = Vector2( 373.56, 60.6488 )
value = 1

[node name="Coin8" parent="map" instance=ExtResource( 7 )]
position = Vector2( 919.248, 222.35 )
value = 1

[node name="Coin9" parent="map" instance=ExtResource( 7 )]
position = Vector2( 917.613, 162.45 )
value = 1

[node name="Coin10" parent="map" instance=ExtResource( 7 )]
position = Vector2( 145.071, -142.384 )
value = 1

[node name="Coin11" parent="map" instance=ExtResource( 7 )]
position = Vector2( 327.604, 221.712 )
value = 1

[node name="Coin12" parent="map" instance=ExtResource( 7 )]
position = Vector2( 496.493, 61.5403 )
value = 1

[node name="Coin13" parent="map" instance=ExtResource( 7 )]
position = Vector2( 330.046, 106.696 )
value = 1

[node name="Coin14" parent="map" instance=ExtResource( 7 )]
position = Vector2( 453.323, -142.967 )
value = 1

[node name="Coin15" parent="map" instance=ExtResource( 7 )]
position = Vector2( 378.88, -143.472 )
value = 1

[node name="Coin16" parent="map" instance=ExtResource( 7 )]
position = Vector2( -57.7227, 58.1572 )
value = 1

[node name="DeadArea" parent="map" instance=ExtResource( 5 )]
position = Vector2( 0, 679.643 )
scale = Vector2( 40, 1 )

[node name="GoalArea" parent="map" instance=ExtResource( 6 )]
position = Vector2( 922.154, 422.305 )

[node name="WallArea" parent="map" instance=ExtResource( 9 )]
position = Vector2( 2396.78, 320.216 )

[node name="WallArea2" parent="map" instance=ExtResource( 9 )]
position = Vector2( -676.345, 195.829 )

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( 347.305, 241.872 )
rotation = -0.00239305
rotate = false
loop = false
__meta__ = {
"_edit_lock_": true
}

[node name="pathTrap" parent="Path2D" instance=ExtResource( 10 )]
position = Vector2( -363.312, -374.284 )

[node name="monster_sborn" type="Position2D" parent="."]
position = Vector2( 354.739, 393.803 )

[connection signal="hit_monster" from="Player_RigidBody2D" to="." method="_on_Player_RigidBody2D_hit_monster"]
[connection signal="monster_touch" from="Player_RigidBody2D" to="." method="_on_Player_RigidBody2D_monster_touch"]
[connection signal="btn_pressed_backtotitle" from="HUD_level" to="." method="_on_HUD_level_btn_pressed_backtotitle"]
[connection signal="btn_pressed_nextlevel" from="HUD_level" to="." method="_on_HUD_level_btn_pressed_nextlevel"]
[connection signal="btn_pressed_retry" from="HUD_level" to="." method="_on_HUD_level_btn_pressed_retry"]
[connection signal="meun_closed" from="HUD_level" to="." method="_on_HUD_level_meun_closed"]
[connection signal="meun_onshow" from="HUD_level" to="." method="_on_HUD_level_meun_onshow"]
[connection signal="timeToReset" from="HUD_level" to="." method="_on_HUD_level_timeToReset"]
[connection signal="coin_hit" from="map/Coin" to="." method="_on_Coin_coin_hit"]
[connection signal="coin_hit" from="map/Coin2" to="." method="_on_Coin_coin_hit"]
[connection signal="coin_hit" from="map/Coin3" to="." method="_on_Coin_coin_hit"]
[connection signal="coin_hit" from="map/Coin4" to="." method="_on_Coin_coin_hit"]
[connection signal="coin_hit" from="map/Coin5" to="." method="_on_Coin_coin_hit"]
[connection signal="coin_hit" from="map/Coin6" to="." method="_on_Coin_coin_hit"]
[connection signal="coin_hit" from="map/Coin7" to="." method="_on_Coin_coin_hit"]
[connection signal="coin_hit" from="map/Coin8" to="." method="_on_Coin_coin_hit"]
[connection signal="coin_hit" from="map/Coin9" to="." method="_on_Coin_coin_hit"]
[connection signal="coin_hit" from="map/Coin10" to="." method="_on_Coin_coin_hit"]
[connection signal="coin_hit" from="map/Coin11" to="." method="_on_Coin_coin_hit"]
[connection signal="coin_hit" from="map/Coin12" to="." method="_on_Coin_coin_hit"]
[connection signal="coin_hit" from="map/Coin13" to="." method="_on_Coin_coin_hit"]
[connection signal="coin_hit" from="map/Coin14" to="." method="_on_Coin_coin_hit"]
[connection signal="coin_hit" from="map/Coin15" to="." method="_on_Coin_coin_hit"]
[connection signal="coin_hit" from="map/Coin16" to="." method="_on_Coin_coin_hit"]
[connection signal="player_in" from="map/DeadArea" to="." method="_on_DeadArea2D_player_in"]
[connection signal="player_in" from="map/GoalArea" to="." method="_on_GoalArea_player_in"]
[connection signal="player_collap" from="Path2D/pathTrap" to="." method="_on_pathTrap_player_collap"]
